--- a/book.list.html
+++ b/book.list.html
@@ -1,5 +1,4 @@
 <div class="container">
-    <hr>
     <h1>List of books</h1>
     <hr>
     <div>
@@ -8,7 +7,7 @@
     </div>
 </div>
 
-<div id="editBookModal" class="modal" tabindex="-1" role="dialog">
+<!-- <div id="editBookModal" class="modal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -16,8 +15,8 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-            </div>
-
+            </div> -->
+<!-- 
             <div class="modal-body">
                 <form id="editForm" method="POST">
                     <div class="form-group">
@@ -28,10 +27,10 @@
                     <div class="form-group">
                         <label for="Title">Title</label>
                         <input class="form-control" name="title" id="title">
-                    </div>
+                    </div> -->
 
  
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
                 </form>
             </div>
         </div>
