Add modify Delete function

--- a/book.list.html
+++ b/book.list.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <hr>
     <h1>List of books</h1>
     <hr>
     <div>
@@ -31,10 +32,10 @@
 
  
                     <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
-                </form>
+                <!-- </form>
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!--Our JS file-->
 <script src="book-list.js"></script>
